[package]
name = "sql2csv"
version = "0.4.0"
authors = ["Bob <nottxy@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Export SQL query to csv file"
documentation = "https://docs.rs/sql2csv"
repository = "https://github.com/nottxy/sql2csv"
keywords = ["sql", 'csv']

[[bin]]
path = "src/main.rs"
name = "sql2csv"

[dependencies]
dotenv = "0.15"
structopt = "0.3"
postgres = "0.19"
csv = "1"
toml = "0.5"
serde = { version = "1", features = ['derive'] }